manifests/httpserver/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
  labels:
    app: httpserver
    service: httpserver
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: httpserver
