manifests/httpserver/templates/envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ext-proc
spec:
  workloadSelector:
    labels:
      version: "2"
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.ext_proc
        typed_config:
          "@type": type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: "type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor"
          value:
            message_timeout:
              seconds: "10"
            processing_mode:
              request_body_mode: BUFFERED
              response_body_mode: BUFFERED
            grpc_service:
              timeout:
                seconds: 10
              google_grpc:
                target_uri: resourceextractor-ext-proc-server.resourceextractor.svc.cluster.local:3443
                stat_prefix: waap
